fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -258,7 +258,7 @@ body {
                     position: relative;
                     border-radius: 8px;
                     min-height: 24vh;
-                    max-height: 40vh;
+                    max-height: 55vh;
                     overflow: hidden;
                     @include mobile {
                         background: #fff;
